animated loading svg

--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -8,6 +8,10 @@ $color-grey-light: #bbbbbb;
 $color-grey-mid: #666666 ;
 $color-grey-dark: #333333;
 
+$kubra-color-green: #80bd01;
+$kubra-color-blue: #0094ca;
+$kubra-color-grey: #536372;
+
 $color-white: #fcfcfc;
 $color-black: #1a1a1a;
 
