--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -25,7 +25,7 @@ html {
 
 body {
   box-sizing: border-box;
-  background-color: $light;
+  background-color: $color-white;
 }
 
 button { cursor: pointer; }
